[package]
name = "roll-rs"
version = "0.1.0"
authors = ["Victor Roest <victor@xirion.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = {version="0.5", features=["getrandom"] }

[dev-dependencies]
bnf = "0.3"
