[package]
name = "roll-rs"
version = "0.1.0"
authors = ["Victor Roest <victor@xirion.net>", "jonay2000 <jonabent@gmail.com>"]
edition = "2018"

[[bin]]
name = "roll"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
rand_core = { version="0.5", features=["getrandom"] }

[dev-dependencies]
bnf = "0.3"
