[package]
name = "roll-rs"
version = "0.3.0"
authors = ["Victor Roest <victor@xirion.net>", "jonay2000 <jonabent@gmail.com>"]
repository = "https://github.com/finitum/roll-rs"
edition = "2021"
description = "Dice rolling library supporting full dice notation"
license = "EUPL-1.2"
keywords = ["dice"]

[[bin]]
name = "roll"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
rand_core = { version="0.6", features=["getrandom"] }

[dev-dependencies]
bnf = "0.4"
