[package]
name = "wasm"
version = "0.1.0"
authors = ["Victor Roest <victor@xirion.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
roll-lib = { path = "../roll-lib" }
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
