[package]
name = "roll-wasm"
version = "0.1.0"
authors = ["Victor Roest <victor@xirion.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
roll-rs = { path = "../roll" }
wasm-bindgen = "0.2"
rand = { version = "0.7", features = ["wasm-bindgen"], default-features = false }
serde-wasm-bindgen = "0.1"
serde = { version = "^1.0", features = ["derive"] }
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
