[package]
name = "roll-wasm"
version = "0.1.0"
authors = ["Victor Roest <victor@xirion.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
roll-rs = { path = "../roll" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.4"
serde = { version = "^1.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
